--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,6 @@ buildscript {
         constraintLayoutVersion = '1.1.2'
         espressoVersion = '3.0.1'
         glideVersion = '4.4.0'
-        gradleVersion = '3.2.0-beta04'
         gsonVersion = '2.8.2'
         junitVersion = '4.12'
         supportLibraryVersion = '27.1.1'
@@ -24,7 +23,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0-beta03'
+        classpath 'com.android.tools.build:gradle:3.1.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
