--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,13 @@ buildscript {
         constraintLayoutVersion = '1.1.2'
         espressoVersion = '3.0.1'
         glideVersion = '4.4.0'
-        gsonVersion = '2.8.2'
+        gsonVersion = '2.8.5'
         junitVersion = '4.12'
         supportLibraryVersion = '27.1.1'
         retrofitVersion = '2.4.0'
         exoplayerVersion = '2.8.2'
         butterknifeVersion = '8.8.1'
+        timberVersion = '4.7.1'
     }
     repositories {
         google()
