--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,8 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     implementation "com.android.support.constraint:constraint-layout:$rootProject.constraintLayoutVersion"
     implementation "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
-    implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
-    implementation "com.github.bumptech.glide:recyclerview-integration:$rootProject.glideVersion"
+    implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation "com.squareup.picasso:picasso:$rootProject.picassoVersion"
     implementation "com.google.code.gson:gson:$rootProject.gsonVersion"
     implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
     implementation "com.google.android.exoplayer:exoplayer:$rootProject.exoplayerVersion"
