--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         // App dependencies
         constraintLayoutVersion = '1.1.2'
         espressoVersion = '3.0.1'
-        glideVersion = '4.4.0'
+        picassoVersion = '2.71828'
         gsonVersion = '2.8.5'
         junitVersion = '4.12'
         supportLibraryVersion = '27.1.1'
