--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.RecipeDetailActivity"
+            android:name=".ui.activity.RecipeStepActivity"
             android:theme="@style/AppTheme"/>
+        <activity android:name=".ui.activity.RecipeStepDetailActivity" />
     </application>
 
 </manifest>
