exoplayer works and next step button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,16 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".ui.activity.RecipeStepActivity"
-            android:theme="@style/AppTheme"/>
-        <activity android:name=".ui.activity.RecipeStepDetailActivity" />
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".ui.activity.RecipeStepDetailActivity"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
