--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,14 @@
         <activity
             android:name=".ui.activity.RecipeStepDetailActivity"
             android:theme="@style/AppTheme" />
+
+        <receiver android:name="RecipeSharingAppWidget" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/recipe_sharing_appwidget" />
+        </receiver>
     </application>
 
 </manifest>
