--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,13 +27,17 @@
             android:name=".ui.activity.RecipeStepDetailActivity"
             android:theme="@style/AppTheme" />
 
-        <receiver android:name="RecipeSharingAppWidget" >
+        <receiver android:name=".widget.RecipeSharingAppWidget" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
-            <meta-data android:name="android.appwidget.provider"
+            <meta-data
+                android:name="android.appwidget.provider"
                 android:resource="@xml/recipe_sharing_appwidget" />
         </receiver>
+        <service
+            android:name=".widget.RecipeSharingAppWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
     </application>
 
 </manifest>
